# StatOxide

./: Cargo.toml  LICENSE  README.md
crates/so-core/: Cargo.toml
crates/so-core/src/: data.rs  error.rs  formula.rs  lib.rs
crates/so-core/src/data/: builder.rs  dataframe.rs  index.rs  ops.rs  series.rs  tests.rs  traits.rs  utils.rs  view.rs
crates/so-core/src/formula/: error.rs  expander.rs  parser.rs  term.rs  tests.rs  utils.rs
crates/so-linalg/: Cargo.toml
crates/so-models/: Cargo.toml
crates/so-models/src/: base.rs  error.rs  lib.rs  lm.rs
crates/so-models/src/base/: coefficient.rs  statistics.rs  summary.rs
crates/so-models/src/lm/: diagnostics.rs  ols.rs  result.rs  tests.rs
crates/so-python/: Cargo.toml  pyproject.toml
crates/so-python/src/: lib.rs
crates/so-stats/: Cargo.toml
crates/so-utits/: Cargo.toml
