[workspace]
members = ["crates/*"]

resolver = "2"

[workspace.package]
name = "statoxide"
version = "0.1.0"
edition = "2024"
authors = ["EthanNov56 <yichen_1226@163.com>"]
description = "High-performance statistical computing library written in Rust, exposed to Python via PyO3"
license = "MIT"
readme = "README.md"

[workspace.dependencies]
ndarray = {version = "0.17.1", features = ["blas"]}
thiserror = "2.0.17"
rand = "0.9.2"
faer = "0.23.2"
