[package]
name = "so-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
indexmap = "2.12.1"
rand.workspace = true
thiserror.workspace = true
ndarray.workspace = true
faer.workspace = true
