[package]
name = "so-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "so_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
